Name: generic-store
Version: 0.0.1
Synopsis: Classes for persistence of Haskell data
Category: Database
--Description:
--Author: David Barbour
--Maintainer: dmbarbour@gmail.com
--Homepage: http://github.com/dmbarbour/haskell-vcache

Package-Url:
--Copyright: (c) 2014-2015 by David Barbour
License: BSD3
license-file: LICENSE
Stability: experimental
build-type: Simple
cabal-version: >= 1.16.0.3

--Extra-source-files:
--    README.md
--    changelog.md

Source-repository head
  type: git
  location: http://github.com/dmbarbour/haskell-vcache.git


Library
  hs-Source-Dirs: hsrc_lib
  default-language: Haskell2010
  Build-Depends: base (>= 4.6 && < 5)
               , bytes (>= 0.15)

  Exposed-Modules: Database.Generic

  --Other-Modules:
